# nannou-web-template

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: lib.rs  main.rs  sketch.rs  web_main.rs
static/: index.html
tests/: app.rs
